Be more immutable